OO-5824: remove extra register of component on layout container
The feature was only used by 2 controllers to show extra buttons but at
the end, the buttons was invisible in both case. Replaced them with a
warning message.